
20/11/2007 Martin Preuss <martin@aquamaniac.de>
	* updated specfile


19/11/2007 Martin Preuss <martin@aquamaniac.de>
	* Release 0.9.0


12/11/2007 Martin Preuss <martin@aquamaniac.de>
	* ofx_preproc.cpp: Increased size of file name buffer (50 was too
          small)


28/9/2007 Martin Preuss <martin@aquamaniac.de>
        * libofx.h: added some fields to OfxFiLogin:
          - header_version
          - appid
          - appver
          It seems to become necessary with some new servers to modify
          these fields by the application.
          
27/9/2007 Martin Preuss <martin@aquamaniac.de>
	* ofx_request_statement.cpp: Incremented versions written to the
          request
        * libofx.h, ofx_utilities.cpp: replaced some char* with "const char*" to make GCC happy,
          wrapped arithmetic calculations in macro definitions in brackets
          to avoid mathematical problems
        * libofx.h: Removed this file, replaced it with libofx.h.in. This
          is used to create libofx.h which now includes some subst variables
          conveying the version of LibOFX to source files. Introduced 
          LIBOFX_BUILD_VERSION and LIBOFX_VERSION_RELEASE_STRING to
          distinguish even CVS versions.
          Added function libofx_set_dtd_dir() which allows to set the
          folder in which DTD files are stored. This is needed for local
          installations (e.g. WIN32)
        * libofx.pc.in: depending libraries don't need to link against
          OpenSP themselves, since LibOFX encapsulates it, no need to
          propagate unnecessary dependencies
        * ofx_utilities.{cpp,h}: added a function to generate a temp file name
          (works on WIN32 and Linux)

24/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
	* ofx_preproc.cpp:  Now parses the OFX headers to determine the input charset and 
          encoding, and uses libiconv (if available) to convert the encoding since OpenSP 